Fix issues in new menu component (#1069)
- Fix no back arrow in new menu-based navigation
- Fix headers are too close to the top

FRON-1120

--- a/mobile/stylist/src/app/core/components/made-menu-header/made-menu-header.component.scss
+++ b/mobile/stylist/src/app/core/components/made-menu-header/made-menu-header.component.scss
@@ -27,6 +27,14 @@
     display: none;
   }
 
+  &.header-ios {
+    padding-top: pxtovw(10px);
+
+    .toolbar {
+      min-height: pxtovw(54px);
+    }
+  }
+
   .BackHeader-backBtn {
     .back-button {
       position: absolute;
